# WebChat

./: LICENSE  README.md
backend/: .gitignore  Pipfile  config.toml.example  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 130215b2f81a_chat_message.py  1fb048660b06_migrate_to_v2.py  28e046513fef_access_and_refresh_token.py  33a9590c62bc_added_initial_models.py  705b75bd30e4_create_user_model.py  78329aabe78e_added_author_id_is_read_type_to_message_.py  7fcef6a19bf6_ondelete_cascade_added_to_message_chat_.py  bc606cdf5e57_access_and_refresh_tokens.py  dc4d3de373f5_server_default_now_added_cascade_to_.py  ef455dc10884_token_model.py
backend/src/: config.py  database.py  enums.py  main.py  models.py  schemas.py
backend/src/auth/: dependencies.py  enums.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
backend/src/chat/: enums.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
docker/frontend/: Dockerfile.frontend.dev
etc/docker/: docker-compose.dev.yml
etc/docker/backend/: Dockerfile.backend.dev
etc/docker/frontend/: Dockerfile.frontend.dev  entrypoint.frontend.dev.sh
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  quasar.config.js
frontend/src/: App.vue  env.d.ts  main.js
frontend/src/boot/: axios.ts  router.ts
frontend/src/components/: ChatList.vue  MessageItem.vue  MessageList.vue  ResizableTextarea.vue  UserSearch.vue
frontend/src/composables/: notifications.ts
frontend/src/css/: app.scss
frontend/src/layouts/: AuthLayout.vue  (+1 more)
(+18 files in other folders)
