[project]
name = "WebChat"
version = "1.0.0"
authors = [
  { email = "denismahnuk@gmail.com" },
  { name = "Denis Mahnyuk"}
]
requires-python = ">=3.11.3"

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "TD002", "TD003"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends"]
